--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <spring-security.version>3.2.5.RELEASE</spring-security.version>
         <hibernate.version>4.3.0.Final</hibernate.version>
         <project.encoding>UTF-8</project.encoding>
+        <jackson.version>1.9.10</jackson.version>
     </properties>
 
     <dependencies>
@@ -48,6 +49,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
